--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.DS_Store
 
 # PyInstaller
 # Usually these files are written by a python script from a template
@@ -121,3 +122,7 @@ docs/_build/
 # State files and tip files
 *.txt
 *.npy
+
+# Ignore vtk files
+*.vtk
+*.vtu
