--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling", "numpy", "numba", "scipy", "matplotlib", "tables", "tqdm", "natsort", "pyvista"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -16,4 +16,27 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: Other/Proprietary License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+  "matplotlib==3.7.1",
+  "natsort==8.4.0",
+  "numba==0.60.0",
+  "numpy<2",
+  "pyvista==0.44.1",
+  "scipy==1.14.1",
+  "setuptools==59.6.0",
+  "scikit-image",
+  "tqdm==4.64.1",
+  "vtk==9.2.6",
+]
+
+[project.optional-dependencies]
+dev = [
+    "mkdocs",
+    "mkdocstrings[python]",
+    "mkdocs-material",
+    "mkdocs-gallery",
+    "mkdocs-gen-files",
+    "mkdocs-literate-nav",
+    "mkdocs-section-index",
 ]
