--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ var/
 .installed.cfg
 *.egg
 .DS_Store
+auto_examples/
 
 # PyInstaller
 # Usually these files are written by a python script from a template
@@ -113,6 +114,7 @@ docs/_build/
 *.jpeg
 # *.gif
 *.svg
+*.zip
 
 # ffmpeg output
 *.mp4
